[package]
name = "mocksql"
version = "0.1.0"
edition = "2021"

[lib]
name = "mocksql"
path = "src/lib.rs"

[[bin]]
name = "mocksql"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlparser = "0.43"
memmap2 = "0.9"
anyhow = "1"
bytes = "1.7"
socket2 = "0.5"
libc = "0.2"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
rustls-pemfile = "2"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
